--- a/site/cardType01.html
+++ b/site/cardType01.html
@@ -19,7 +19,7 @@
 
 
 
-    <section id="cardType" class="cardType01">
+    <section class="cardType cardType01">
         <div class="container">
       <h2>INDECISIVE</h2>
       <p>결정하는데 있어서 항상 어려움을 느끼는 분들을 위한 사이트 입니다.</p>
@@ -39,10 +39,10 @@
             <a href="#">
                 <img src="img/card02.jpg" alt="사이트 만들기 관련 이미지입니다." class="card-img">
                 <strong class="card-title">오늘 뭐 하지?</strong>
-                <span class="card-desc">당신처럼 할거 없는 사람들과 시간을 보내 보세요.</span>
+                <span class="card-desc">당신처럼 할거 없는 사람들과 시간을 보내 보세요. 당신처럼 할거 없는 사람들과 시간을 보내 보세요.</span>
                 <span class="card-keyword">
                     <span>#오늘</span>
-                    <span>#뭐 하지</span>
+                    <span>#뭐 하지</span> 
                 </span>
               </a>
           </div>
@@ -59,6 +59,57 @@
             </div>
         </div>
     </div>  
+</section>
+
+<section class="cardType cardType02">
+    <div class="container">
+        <div class="container1">
+            <h2>INDECISIVE</h2>
+        <P>결정하는데 어려움을 느끼는 이도 저도 아닌 당신같은 사람을 위한 사이트 입니다.</P>
+        </div>
+       <div class="card-wrap02">
+        <div class="card02">
+            <a href="#">
+                <img src="img/card04.jpg" alt="사이트만들기 이미지">
+                <strong class="card-title">오늘 뭐 먹지?</strong>
+                <span class="card-desc">먹는거 하나도 제대로 못고르는 당신을 위한 사이트 입니다.</span>
+                <span class="card-keyword">
+                    <span>SITE</span>
+                </span>
+            </a>
+        </div>
+        <div class="card02">
+            <a href="#">
+                <img src="img/card05.jpg" alt="사이트만들기 이미지">
+                <strong class="card-title">오늘 뭐 하지?</strong>
+                <span class="card-desc">집에서 고민만 하다 시간낭비 하는 당신을위한 사이트입니다.</span>
+                <span class="card-keyword">
+                    <span>SITE</span>
+                </span>
+            </a>
+        </div>
+        <div class="card02">
+            <a href="#">
+                <img src="img/card06.jpg" alt="사이트만들기 이미지">
+                <strong class="card-title">오늘 뭐 입지?</strong>
+                <span class="card-desc">옷 하나 고르지 못하고 항상 약속 시간에 늦는 당신을 위한 사이트 입니다.</span>
+                <span class="card-keyword">
+                    <span>SITE</span>
+                </span>
+            </a>
+        </div>
+        <div class="card02">
+            <a href="#">
+                <img src="img/card07.jpg" alt="사이트만들기 이미지">
+                <strong class="card-title">유튜브/넷플릭스 추천</strong>
+                <span class="card-desc">뭐 하나도 제대로 고르지 못하는 당신을 위해서 영상을 추천해 드립니다.</span>
+                <span class="card-keyword">
+                    <span>SITE</span>
+                </span>
+            </a>
+        </div>
+       </div>
+    </div>
 </section>
 </body>
 </html>  
