--- a/java script/javascriptRefer06.html
+++ b/java script/javascriptRefer06.html
@@ -1454,7 +1454,7 @@
 
             document.querySelector(".sample04_N2").innerHTML = "2";
             document.querySelector(".sample04_Q2").innerHTML = "[100, 200, 300, 400, 500]";
-            document.querySelector(".sample04_M2").innerHTML = ".shift()";
+            document.querySelector(".sample04_M2").innerHTML = ".pop()";
             document.querySelector(".sample04_P2").innerHTML = text2;
             document.querySelector(".sample04_R2").innerHTML = arr2;
         }
