--- a/java script/test.html
+++ b/java script/test.html
@@ -123,6 +123,31 @@
     }
     const info1 = new func10("함수", "실행");
     info1.result();
+
+
+    //1부터 10까지
+
+    for(let i = 1; i<=10; i++){
+        document.write(i);
+    }
+
+    //forEach
+    {
+        const num = [1,2,3,4,5,6,7,8,9,10]
+
+
+        num.forEach(function(el){
+            document.write(el);
+        });
+
+        for(let i in num){
+            document.write(i)
+        }
+
+        for(let i of num){
+            document.write(i)
+        }
+    }
     </script>
 </body>
 </html>
