--- a/site/cardType.html
+++ b/site/cardType.html
@@ -110,14 +110,18 @@
     <div class="container">
         <div class="cardType03">
             <h2>웹스토리보이 레퍼런스 북</h2>
-            <p>웹 디자이너, 웹 퍼블리셔, 프론트앤드 개발자를 위한 레퍼런스 북 입니다.</p>
+            <p>웹 디자이너, 웹 퍼블리셔, 프론트앤드 개발자를 위한 레퍼런스 북 입니다.
+                <a href="#" class="cd1">최신순</a>
+            <a href="#" class="cd2">인기순</a>
+            </p>
             <div class="card-wrap">
                 <div class="card03">
                     <a href="#">
                         <img src="img/card04.jpg" alt="사이트 만들기 관련 이미지 입니다." class="card-img">
                         <span class="card-word">HTML</span>
-                        <strong class="card-title">wbr 태그는 줄바꿈 할 위치를 정의할 때 사용합니다.</strong>
-                        <span class="card-desc">태그의 사용은 제한적입니다. 일반적인 한글이나 영어에서는 해당이 되지 않습니다. 의미가 없는 단어나 해석 할 수 없는 단어의 줄바꿈을 할 때 사용합니다. 예를 들면 의미적 전달이 안되는 브라우저의 주소가 가장 적절한 예가 될 것입니다. 단어의 줄바꿈이나 글자의 줄바꿈을 컨트롤 하고 싶다면 word-break 속성을 사용합니다.</span>
+                        <strong class="card-title">&lt;wbr&gt; 태그는 줄바꿈 할 위치를 정의할 때 사용합니다.</strong>
+                        <span class="card-desc">태그의 사용은 제한적입니다. 일반적인 한글이나 영어에서는 해당이 되지 않습니다. 의미가 없는 단어나 해석 할 수 없는 단어의 줄바꿈을 할 때 사용합니다. 예를 들면 의미적 전달이 안되는 브라우저의 주소가 가장 적절한 예가 될 것입니다. 단어의 줄바꿈이나 글자의 줄바꿈을 컨트롤 하고 싶다면 word-break 속성을 사용합니다. </span>
+                        <span class="card-date">2021.08.20</span>
                     </a>
                 </div>
             </div>
@@ -125,9 +129,10 @@
                 <div class="card03">
                     <a href="#">
                         <img src="img/card04.jpg" alt="사이트 만들기 관련 이미지 입니다." class="card-img">
-                        <span class="card-word">css</span>
-                        <strong class="card-title">wbr 태그는 줄바꿈 할 위치를 정의할 때 사용합니다.</strong>
+                        <span class="card-word2">css</span>
+                        <strong class="card-title">&lt;aside&gt; 태그는 줄바꿈 할 위치를 정의할 때 사용합니다.</strong>
                         <span class="card-desc">태그의 사용은 제한적입니다. 일반적인 한글이나 영어에서는 해당이 되지 않습니다. 의미가 없는 단어나 해석 할 수 없는 단어의 줄바꿈을 할 때 사용합니다. 예를 들면 의미적 전달이 안되는 브라우저의 주소가 가장 적절한 예가 될 것입니다. 단어의 줄바꿈이나 글자의 줄바꿈을 컨트롤 하고 싶다면 word-break 속성을 사용합니다.</span>
+                        <span class="card-date">2021.08.20</span>
                     </a>
                 </div>
             </div>
@@ -135,9 +140,10 @@
                 <div class="card03">
                     <a href="#">
                         <img src="img/card04.jpg" alt="사이트 만들기 관련 이미지 입니다." class="card-img">
-                        <span class="card-word">HTML</span>
-                        <strong class="card-title">wbr 태그는 줄바꿈 할 위치를 정의할 때 사용합니다.</strong>
+                        <span class="card-word3">javascript</span>
+                        <strong class="card-title">&lt;article&gt; 태그는 줄바꿈 할 위치를 정의할 때 사용합니다.</strong>
                         <span class="card-desc">태그의 사용은 제한적입니다. 일반적인 한글이나 영어에서는 해당이 되지 않습니다. 의미가 없는 단어나 해석 할 수 없는 단어의 줄바꿈을 할 때 사용합니다. 예를 들면 의미적 전달이 안되는 브라우저의 주소가 가장 적절한 예가 될 것입니다. 단어의 줄바꿈이나 글자의 줄바꿈을 컨트롤 하고 싶다면 word-break 속성을 사용합니다.</span>
+                        <span class="card-date">2021.08.20</span>
                     </a>
                 </div>
             </div>
@@ -145,9 +151,10 @@
                 <div class="card03">
                     <a href="#">
                         <img src="img/card04.jpg" alt="사이트 만들기 관련 이미지 입니다." class="card-img">
-                        <span class="card-word">HTML</span>
-                        <strong class="card-title">wbr 태그는 줄바꿈 할 위치를 정의할 때 사용합니다.</strong>
+                        <span class="card-word4">jquery</span>
+                        <strong class="card-title">&lt;wbr&gt; 태그는 줄바꿈 할 위치를 정의할 때 사용합니다.</strong>
                         <span class="card-desc">태그의 사용은 제한적입니다. 일반적인 한글이나 영어에서는 해당이 되지 않습니다. 의미가 없는 단어나 해석 할 수 없는 단어의 줄바꿈을 할 때 사용합니다. 예를 들면 의미적 전달이 안되는 브라우저의 주소가 가장 적절한 예가 될 것입니다. 단어의 줄바꿈이나 글자의 줄바꿈을 컨트롤 하고 싶다면 word-break 속성을 사용합니다.</span>
+                        <span class="card-date">2021.08.20</span>
                     </a>
                 </div>
             </div>
