--- a/java script/javascriptRefer01.html
+++ b/java script/javascriptRefer01.html
@@ -253,9 +253,9 @@
 <body>
     <h1><a href="index.html">Javascript 레퍼런스</a></h1>
     <ul class="page">
-        <li><a href="#">HTML</a></li>
+        <li><a href="/refer-html/index.html">HTML</a></li>
         <li><a href="../refer-css/index.html">CSS</a></li>
-        <li><a href="../java script/javascript100.html">JAVASCRIPT</a></li>  
+        <li><a href="../java script/index.html">JAVASCRIPT</a></li>  
     </ul>
     <nav class="menu">
         <ul>
