--- a/java script/jqueryRefer01.html
+++ b/java script/jqueryRefer01.html
@@ -226,6 +226,7 @@
         .table {
             border-collapse: collapse;
             border-spacing: 0;
+            margin-top: 50px;
         }
         .table table {
             width: 100%;
