--- a/refer-css/index.html
+++ b/refer-css/index.html
@@ -92,6 +92,7 @@
         .refer h3 {
             display: inline-block;
             padding: 6px 30px;
+            background: #fff;
             margin-bottom: 40px;
             background-color: #00DB72;
             color: #fff;
@@ -99,9 +100,9 @@
         .refer h3 a {
                 text-decoration: none;
                 color: #fff;
-            }
+        }
         .refer h3.active {
-                box-shadow: inset 0 5px 0 0 #0bc56b;
+            box-shadow: inset 0px -5px 0 0px #068d4c;
             }
         .refer table {
             width: 100%;
@@ -207,9 +208,9 @@
     <main id="content">
         <h2>CSS <em>래퍼런스 북</em></h2>
         <ul class="page">
-            <li><a href="#">HTML</a></li>
+            <li><a href="../refer-html/index.html">HTML</a></li>
             <li><a href="../refer-css/index.html">CSS</a></li>
-            <li><a href="../java script/javascript100.html">JAVASCRIPT</a></li>  
+            <li><a href="../java script/index.html">JAVASCRIPT</a></li>  
         </ul>
         <section class="refer">
             <h3 class="active"><a href =index.html>Alphabet</a></h3>
