--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
                     </section>
                     <!-- //box -->
 
-                        <!-- box -->
+                    <!-- box -->
                     <section class="color-shape class">
-                        <a href="java script/index.html" target="_blank">
+                        <a href="refer-javascript/index.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
                                     <span class="overlay-img-donut">JAVASCRIPT</span>
@@ -211,6 +211,27 @@
                                     <h5>JAVASCRIPT</h5>
                                     <p>자바스크립트</p>
                                     <span>JAVASCRIPT</span>
+                                </div>
+                            </div>
+                        </a>
+                    </section>
+                    <!-- //box -->
+
+                     <!-- box -->
+                     <section class="color-shape class">
+                        <a href="refer-jquery/index2.html" target="_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">JQUERY</span>
+                                    <span class="overlay-text-thumb-donut">제이쿼리</span>
+                                    <span class="overlay-text-thumb1-donut">제이쿼리</span>
+                                    <span class="overlay-text-thumb2-donut">JQUERY</span>
+                                </div>
+                                <img src="assets/img/svg-vanilla-cupcake.svg" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>JQUERY</h5>
+                                    <p>제이쿼리</p>
+                                    <span>JQUERY</span>
                                 </div>
                             </div>
                         </a>
