--- a/site/imageType.html
+++ b/site/imageType.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,23 +13,37 @@
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/imageType.css">
 </head>
+
 <body>
     <section class="imageType">
         <div class="container">
-            <h2>FUR SEAL</h2>
-            <div class="image-wrap">
-                <div class="image">
-                    <a href="#">
-                        <img src="/site/img/card12.jpg" alt="이미지1">
-                        <strong class="image-title">바다의 강아지 물개</strong>
-                        <span class="image-word">남극이나 북태평양과 같은 한대의 바다에서 
-                              주로 서식한다.특히 해변가나 바위가 많은 지역에서 살고 있다.
-                        </span>
-                        <span class="image-more">자세히보기</span>
-                    </a>
+            <div class="imageType01">
+                <h2>FUR SEAL</h2>
+                <div class="image-wrap">
+                    <div class="image">
+                        <img src="../site/img/card12.jpg" alt="이미지1">
+                        <div class="in">
+                            <strong class="title">바다의 강아지 물개</strong>
+                            <span class="word">남극이나 북태평양과 같은 한대의 바다에서
+                                주로 서식한다<br>특히 해변가나 바위가 많은 지역에서 살고 있다.</span>
+                            <span class="btn">자세히 보기</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="image-wrap">
+                    <div class="image">
+                        <img src="../site/img/card13.jpg" alt="이미지1">
+                        <div class="in">
+                            <strong class="title">바다의 강아지 물개</strong>
+                            <span class="word">남극이나 북태평양과 같은 한대의 바다에서
+                                주로 서식한다<br>특히 해변가나 바위가 많은 지역에서 살고 있다.</span>
+                            <span class="btn">자세히 보기</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 </body>
+
 </html>
