--- a/site/imageType.html
+++ b/site/imageType.html
@@ -15,35 +15,66 @@
 </head>
 
 <body>
-    <section class="imageType">
+    <!-- imgType01 -->
+    <section class="imgType">
         <div class="container">
-            <div class="imageType01">
+            <div class="imgType01">
                 <h2>FUR SEAL</h2>
-                <div class="image-wrap">
-                    <div class="image">
-                        <img src="../site/img/card12.jpg" alt="이미지1">
-                        <div class="in">
-                            <strong class="title">바다의 강아지 물개</strong>
-                            <span class="word">남극이나 북태평양과 같은 한대의 바다에서
-                                주로 서식한다<br>특히 해변가나 바위가 많은 지역에서 살고 있다.</span>
-                            <span class="btn">자세히 보기</span>
+                <div class="img-wrap">
+                    <div class="img">
+                        <img src="img/card12.jpg" alt="물개 1">
+                        <div class="img-box">
+                            <strong class="img-title">바다의 강아지 물개</strong>
+                            <span class="img-desc">남극이나 북태평양과 같은 한대의 바다에서 
+                                주로 서식한다.특히 해변가나 바위가 많은 지역에서 살고 있다.</span>
+                            <span class="img-keyword"><a href="#">자세히 보기</a></span>
                         </div>
                     </div>
-                </div>
-                <div class="image-wrap">
-                    <div class="image">
-                        <img src="../site/img/card13.jpg" alt="이미지1">
-                        <div class="in">
-                            <strong class="title">바다의 강아지 물개</strong>
-                            <span class="word">남극이나 북태평양과 같은 한대의 바다에서
-                                주로 서식한다<br>특히 해변가나 바위가 많은 지역에서 살고 있다.</span>
-                            <span class="btn">자세히 보기</span>
+                    <div class="img">
+                        <img src="img/card13.jpg" alt="물개 2">
+                        <div class="img-box">
+                            <strong class="img-title">바다표범 , 바다사자</strong>
+                            <span class="img-desc">비슷한 형태인 바다표범과 혼동하는 경우가 있는데, 
+                                쉬운 구별법은 뒷다리의 형태를 확인하면 된다.</span>
+                            <span class="img-keyword"><a href="#">자세히 보기</a></span>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    <!-- image01 -->
+
+    <!-- image02 -->
+    <section class="imgType">
+        <div class="container">
+            <div class="imgType02">
+                <h2>CAMEL</h2>
+                <div class="img-wrap">
+                    <div class="img">
+                        <img src="img/card14.jpg" alt="낙타1">
+                        <div class="img-box">
+                            <strong class="img-title1">CAMEL</strong>
+                        </div>
+                    </div>
+                    <div class="img">
+                        <img src="img/card15.jpg" alt="낙타2">
+                        <div class="img-box">
+                            <strong class="img-title2">CAMEL</strong>
+                            <span class="img-keyword"><a href="#">자세히 보기</a></span>
+                        </div>
+                    </div>
+                    <div class="img">
+                        <img src="img/card16.jpg" alt="낙타3">
+                        <div class="img-box">
+                            <strong class="img-title3">CAMEL</strong>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- //image02 -->
 </body>
 
 </html>
