--- a/refer-jquery/jqueryRefer03.html
+++ b/refer-jquery/jqueryRefer03.html
@@ -152,79 +152,79 @@
                 </tr>
                 <tr>
                     <td>.addClass()</td>
-                    <td>-</td>
+                    <td><a href="../refer-javascript/javascriptRefer10.html" target="_blank">.classList.add()</a></td>
                     <td>클래스를 추가합니다.</td>
                 </tr>
                 <tr>
                     <td>.removeClass()</td>
-                    <td>-</td>
+                    <td><a href="../refer-javascript/javascriptRefer10.html" target="_blank"></a>.classList.remove()</td>
                     <td>클래스를 삭제합니다.</td>
                 </tr>
                 <tr>
                     <td>.toggleClass()</td>
-                    <td>-</td>
-                    <td>-</td>
+                    <td><a href="../refer-javascript/javascriptRefer10.html" target="_blank"></a>.classList.toggle()</td>
+                    <td>클래스를 추가/ 삭제 합니다.</td>
                 </tr>
                 <tr>
                     <td>.hasClass()</td>
-                    <td>-</td>
-                    <td>-</td>
+                    <td><a href="../refer-javascript/javascriptRefer10.html" target="_blank"></a>.classList.contains()</td>
+                    <td>클래스를 검색 합니다.</td>
                 </tr>
                 <tr>
                     <td class="center" rowspan="6">Dimensions</td>
                     <td>.width()</td>
                     <td>-</td>
-                    <td>-</td>
+                    <td>요소의 가로 값을 가져오거나 설정합니다.</td>
                 </tr>
                 <tr>
                     <td>.innerwidth()</td>
                     <td>-</td>
-                    <td>-</td>
+                    <td>요소의 가로(패딩, 보더, 마진 포함) 값을 가져오거나 설정합니다.</td>
                 </tr>
                 <tr>
                     <td>.outerwidth()</td>
                     <td>-</td>
-                    <td>-</td>
+                    <td>요소의 가로(패딩, 보더, 포함) 값을 가져오거나 설정합니다.</td>
                 </tr>
                 <tr>
                     <td>.height()</td>
                     <td>-</td>
-                    <td>-</td>
+                    <td>요소의 세로 값을 가져오거나 설정합니다.</td>
                 </tr>
                 <tr>
                     <td>.innerheight()</td>
                     <td>-</td>
-                    <td>-</td>
+                    <td>요소의 세로(패딩, 보더, 마진 포함) 값을 가져오거나 설정합니다.</td>
                 </tr>
                 <tr>
                     <td>.outerheight()</td>
                     <td>-</td>
-                    <td>-</td>
+                    <td>요소의 세로(패딩, 보더, 마진 포함) 값을 가져오거나 설정합니다.</td>
                 </tr>
                 <tr>
                     <td class="center" rowspan="5">Offset</td>
                     <td>.offset()</td>
                     <td>-</td>
-                    <td>-</td>
+                    <td>요소의 좌표 값(문서 기준)을 가져오거나 설정합니다.</td>
                 </tr>
                 <tr>
                     <td>.offsetParent()</td>
                     <td>-</td>
-                    <td>-</td>
+                    <td>요소의 좌표 값(부모 박스 기준)을 가져오거나 설정합니다.</td>
                 </tr>
                 <tr>
                     <td>.position()</td>
                     <td>-</td>
-                    <td>-</td>
+                    <td>요소의 좌표 값(기준점 기준)을 가져오거나 설정합니다.</td>
                 <tr>
                     <td>.scrollLeft()</td>
                     <td>-</td>
-                    <td>-</td>
+                    <td>요소의 가로 스크롤 값을 가져오거나 설정합니다.</td>
                 </tr>
                 <tr>
                     <td>.scrollTop()</td>
                     <td>-</td>
-                    <td>-</td>
+                    <td>요소의 세로 스크롤 값을 가져오거나 설정합니다.</td>
                 </tr>
                 <tr>
                     <td class="center" rowspan="2">Data</td>
@@ -380,8 +380,286 @@
         });
     </script>
 
-    <!-- sample02 -->
+    <!-- sample03 -->
 
+    <hr>
+
+     <!-- sample04 -->
+
+    <style>
+        .ex4 {
+            min-height: 300px;
+            position: relative;
+        }
+        .ex4 .circle {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50% , -50%);
+            display: block;
+            height: 100px;
+            width: 100px;
+            border-radius: 50%;
+            background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
+            padding: 10px;
+            margin: 10px;
+            border: 5px solid #eb97d3;
+        }
+    </style>
+
+     <div id="sample04" class="sample">
+        <h2>04. 속성 메서드 : width(), innerwidth() , outerwidth()</address><span class="dot"></span></h2>
+        <div class="view ex4">
+            <span class="circle circle4"></span>
+            <p class="text text4">여기는 텍스트 영역입니다.</p>
+        </div>
+        <div class="btn">
+            <a href="#c" class="btn4-1">클릭하면 원의 가로(width) 값을 구합니다.</a>
+            <a href="#c" class="btn4-2">클릭하면 원의 가로(innerwidth) 값을 구합니다.</a>
+            <a href="#c" class="btn4-3">클릭하면 원의 가로(outerwidth) 값을 구합니다.</a>
+            <a href="#c" class="btn4-4">클릭하면 원의 세로(height) 값을 구합니다.</a>
+            <a href="#c" class="btn4-5">클릭하면 원의 세로(innerHeight) 값을 구합니다.</a>
+            <a href="#c" class="btn4-6">클릭하면 원의 세로(outerHeight) 값을 구합니다.</a>
+        </div>
+        <div class="btn">
+            <a href="#c" class="btn4-7">클릭하면 샘플 박스의 가로 값을 구합니다.</a>
+            <a href="#c" class="btn4-8">클릭하면 문서의 가로 값을 구합니다.</a>
+            <a href="#c" class="btn4-9">클릭하면 브라우저의 가로 값을 구합니다.</a>
+        </div>
+        <div class="code">
+            <pre class="line-numbers"><code class="language-js"> {
+    function demension(name , size){
+        $(".text4").text("원의" + name + "값은" + size + "px 입니다." );
+    }
+
+
+    $(".btn4-1").click(function(){
+        demension("가로(width)" , $(".circle4").width());   
+    });
+
+    $(".btn4-2").click(function(){
+        demension("가로(innerwidth)" , $(".circle4").innerWidth());
+    });
+
+    $(".btn4-3").click(function(){
+        demension("가로(outerwidth)" , $(".circle4").outerWidth());
+    });
+
+    $(".btn4-4").click(function(){
+        demension("세로(height)" , $(".circle4").height());
+    });
+
+    $(".btn4-5").click(function(){
+        demension("세로(innerheight)" , $(".circle4").innerHeight());
+    });
+
+    $(".btn4-6").click(function(){
+        demension("세로(outerheight)" , $(".circle4").outerHeight());
+    });
+
+    $(".btn4-7").click(function(){
+        $(".text4").text("샘플 박스의 가로 값은" + $("#sample04").width() + "px입니다.")
+    });
+
+    $(".btn4-8").click(function(){
+        $(".text4").text("문서의 가로 값은" + $(document).width() + "px입니다.")
+    });
+
+    $(".btn4-9").click(function(){
+        $(".text4").text("브라우저의 가로 값은" + $(window).width() + "px입니다.")
+    });
+}
+</code></pre>
+        </div>
+    </div>
+    <hr>
+
+    <script>
+        function demension(name , size){
+            $(".text4").text("원의" + name + "값은" + size + "px 입니다." );
+        }
+
+
+        $(".btn4-1").click(function(){
+            demension("가로(width)" , $(".circle4").width());   
+        });
+
+        $(".btn4-2").click(function(){
+            demension("가로(innerwidth)" , $(".circle4").innerWidth());
+        });
+
+        $(".btn4-3").click(function(){
+            demension("가로(outerwidth)" , $(".circle4").outerWidth());
+        });
+
+        $(".btn4-4").click(function(){
+            demension("세로(height)" , $(".circle4").height());
+        });
+
+        $(".btn4-5").click(function(){
+            demension("세로(innerheight)" , $(".circle4").innerHeight());
+        });
+
+        $(".btn4-6").click(function(){
+            demension("세로(outerheight)" , $(".circle4").outerHeight());
+        });
+
+        $(".btn4-7").click(function(){
+            $(".text4").text("샘플 박스의 가로 값은" + $("#sample04").width() + "px입니다.")
+        });
+
+        $(".btn4-8").click(function(){
+            $(".text4").text("문서의 가로 값은" + $(document).width() + "px입니다.")
+        });
+
+        $(".btn4-9").click(function(){
+            $(".text4").text("브라우저의 가로 값은" + $(window).width() + "px입니다.")
+        });
+    </script>
+
+    <!-- sample04 -->
+
+    <hr>
+
+
+     <!-- sample05 -->
+
+    <style>
+        .ex5 {
+          text-align: center;
+        }
+        .ex5 .circle {
+            display: inline-block;
+            height: 100px;
+            width: 100px;
+            border-radius: 50%;
+            background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
+            padding: 10px;
+            margin: 10px;
+            border: 5px solid #eb97d3;
+        }
+    </style>
+
+     <div id="sample05" class="sample">
+        <h2>05. 속성 메서드 : .offset()/ .position()</address><span class="dot"></span></h2>
+        <div class="view ex5">
+            <span class="circle circle5"></span>
+        </div>
+        <div class="btn">
+            <a href="#c" class="btn5-0">리셋</a>
+            <a href="#c" class="btn5-1">클릭하면 원의 가로 값을 300px로 변경합니다.</a>
+            <a href="#c" class="btn5-2">클릭하면 원의 세로 값을 300px로 변경합니다.</a>
+            <a href="#c" class="btn5-3">클릭하면 원의 가로 세로 값을 300px로 변경합니다.</a>
+        </div>
+        <div class="code">
+            <pre class="line-numbers"><code class="language-js"> {
+    $(".btn5-0").click(function(){
+        $(".circle5").width("70").height("70");
+    });
+    $(".btn5-1").click(function(){
+        $(".circle5").width("300");
+    });
+    $(".btn5-2").click(function(){
+        $(".circle5").height("300");
+    });
+    $(".btn5-3").click(function(){
+        $(".circle5").height("200").height("200");
+    });
+}
+</code></pre>
+        </div>
+    </div>
+    <hr>
+
+    <script>
+         $(".btn5-0").click(function(){
+            $(".circle5").width("70").height("70");
+        });
+        $(".btn5-1").click(function(){
+            $(".circle5").width("300");
+        });
+        $(".btn5-2").click(function(){
+            $(".circle5").height("300");
+        });
+        $(".btn5-3").click(function(){
+            $(".circle5").height("200").height("200");
+        });
+    </script>
+
+    <!-- sample05 -->
+
+
+    <hr>
+    <!-- sample06 -->
+
+    <style>
+        .ex6 {
+            min-height: 300px;
+            position: relative;
+        }
+        .ex6 .circle {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50% , -50%);
+            display: block;
+            height: 100px;
+            width: 100px;
+            border-radius: 50%;
+            background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
+            padding: 10px;
+            margin: 10px;
+            border: 5px solid #eb97d3;
+        }
+    </style>
+
+     <div id="sample06" class="sample">
+        <h2>06. 속성 메서드 : width(), innerwidth() , outerwidth()</address><span class="dot"></span></h2>
+        <div class="view ex6">
+            <span class="circle circle6"></span>
+            <p class="text text6">여기는 텍스트 영역입니다.</p>
+        </div>
+        <div class="btn">
+            <a href="#c" class="btn6-1">클릭하면 원의 x축 위치(offset) 값을 구합니다.</a>
+            <a href="#c" class="btn6-2">클릭하면 원의 y축 위치(offset) 값을 구합니다.</a>
+            <a href="#c" class="btn6-3">클릭하면 원의 x축 위치(position) 값을 구합니다.</a>
+            <a href="#c" class="btn6-4">클릭하면 원의 y축 위치(position) 값을 구합니다.</a>
+        </div>
+        <div class="code">
+            <pre class="line-numbers"><code class="language-js"> {
+ 
+}
+</code></pre>
+        </div>
+    </div>
+    <hr>
+
+    <script>
+        $(".btn6-1").click(function(){
+            $(".text6").text("이 원의 x축 값은" + $(".circle6").offset().left + "px입니다.");
+        });
+
+        $(".btn6-2").click(function(){
+            $(".text6").text("이 원의 y축 값은" + $(".circle6").offset().top + "px입니다.");
+        });
+
+        $(".btn6-3").click(function(){
+            $(".text6").text("이 원의 x축 값은" + $(".circle6").position().left + "px입니다.");
+        });
+
+        $(".btn6-4").click(function(){
+            $(".text6").text("이 원의 y축 값은" + $(".circle6").position().top + "px입니다.");
+        });
+    </script>
+
+    <!-- sample06 -->
+    <hr>
+    <hr>
+    <hr>
+    <hr>
+    <hr>
+    <hr>
+    <hr>
     <hr>
 
 
