--- a/site/index.html
+++ b/site/index.html
@@ -87,6 +87,13 @@
                 </div>
                 <!-- //Intro1 -->
 
+                 <!-- Intro2 -->
+                 <div class="bs-docs-section">
+                    <h2 id="intro2" class="page-header">이미지유형1</h2>
+                    <p>코드 보기 <a href="imageType.html">View</a></p>
+                </div>
+                <!-- //Intro2 -->
+
                
         
             </div>
@@ -98,6 +105,7 @@
                 <div class="bs-sidebar hidden-print" role="complementary">
                     <ul class="nav bs-sidenav">
                         <li><a href="#intro1">카드 유형1</a></li>
+                        <li><a href="#intro2">이미지 유형1</a></li>
                     </ul>
                 </div>
             </div>
