--- a/site/imageType.html
+++ b/site/imageType.html
@@ -75,6 +75,56 @@
         </div>
     </section>
     <!-- //image02 -->
+
+    <section class="imgtype">
+        <div class="container">
+            <div class="imgType03">
+                <h2>LANDMARK NEW YORK</h2>
+                <div class="img-wrap">
+                    <div class="img">
+                        <img src="img/card17.jpg" alt="센트럴 파크">
+                        <div class="img-box">
+                            <strong class="img-title">CENTRAL PARK</strong>
+                            <span class="img-desc">미국 뉴욕시 맨해튼에 있는 거대한 공원 1856년에 설립되었다.<br>“도심에서 자연으로 최단시간 탈출”이라는 옴스테드의 설계.......</span>
+                            <span class="img-keyword"><a href="#">자세히 보기</a></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="img-wrap">
+                    <div class="img2">
+                        <img src="img/card18.jpg" alt="센트럴 파크">
+                        <div class="img-box2">
+                            <strong class="img-title">Empire State Buliding</strong>
+                        </div>
+                    </div>
+                </div>
+                <div class="img-wrap">
+                    <div class="img3">
+                        <img src="img/card19.jpg" alt="타임 스퀘어">
+                        <div class="img-box3">
+                            <strong class="img-title">Times Square</strong>
+                        </div>
+                    </div>
+                </div>
+                <div class="img-wrap">
+                    <div class="img4">
+                        <img src="img/card20.jpg" alt="록펠러">
+                        <div class="img-box4">
+                            <strong class="img-title">Rockfeller Center</strong>
+                        </div>
+                    </div>
+                </div>
+                <div class="img-wrap">
+                    <div class="img5">
+                        <img src="img/card21.jpg" alt="moma">
+                        <div class="img-box5">
+                            <strong class="img-title">MoMA</strong>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
