--- a/site/imageType.html
+++ b/site/imageType.html
@@ -28,29 +28,62 @@
     <section class="imageType">
         <div class="container">
             <div class="imageType01">
-               <h2>FUL SEAL</h2>
-               <div class="image-wrap">
-                   <div class="image">
-                       <img src="img/card12.jpg" alt="물개1">
-                       <div class="image-cont">
+                <h2>FUL SEAL</h2>
+                <div class="image-wrap">
+                    <div class="image">
+                        <img src="img/card12.jpg" alt="물개1">
+                        <div class="image-cont">
                             <h3 class="image-title">바다의 강아지 물개</h3>
                             <p class="image-desc">남극이나 북태평양과 같은 한대의 바다에서 주로 서식한다.특히 해변가나 바위가 많은 지역에서 살고 있다.</p>
                             <a class="image-btn red" href="#">자세히 보기</a>
-                       </div>
-                   </div>
-                   <div class="image">
+                        </div>
+                    </div>
+                    <div class="image">
                         <img src="img/card13.jpg" alt="물개2">
                         <div class="image-cont s2">
                             <h3 class="image-title">바다사자 , 바다표범</h3>
                             <p class="image-desc">비슷한 형태인 바다표범과 혼동하는 경우가 있는데,쉬운 구별법은 뒷다리의 형태를 확인하면 된다.</p>
                             <a class="image-btn yellow" href="#">자세히 보기</a>
                         </div>
-                   </div>
-               </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- imageType01 -->
+
+    <!-- imageType02 -->
+    <section class="imageType">
+        <div class="container">
+            <div class="imageType02">
+               <h2>바다속 해파리</h2>
+                <div class="image-wrap">
+                    <figure class="image">
+                        <img src="img/imageType03.jpg" alt="해파리1"> 
+                        <figcaption class="image-cont">                                           
+                            <h3  class="image-title">해파리 형태</h3>
+                            <a href="#" class="image-btn">자세히보기</a>
+                        </figcaption>
+                    </figure>
+                    <figure class="image">
+                        <img src="img/imageType04.jpg" alt="해파리2"> 
+                        <figcaption class="image-cont">                                           
+                            <h3  class="image-title">해파리 종류</h3>
+                            <a href="#" class="image-btn">자세히보기</a>
+                        </figcaption>
+                    </figure>
+                    <figure class="image">
+                        <img src="img/imageType05.jpg" alt="해파리3"> 
+                        <figcaption class="image-cont">                                           
+                            <h3  class="image-title">위험한 해파리</h3>
+                            <a href="#" class="image-btn">자세히보기</a>
+                        </figcaption>
+                    </figure>
+                </div>
             </div>
          </div>  
-</section>
-<!-- imageType01 -->
+    </section>
+    <!-- imageType02 -->
 </body>
 
 </html>
