--- a/refer-javascript/javascriptRefer06.html
+++ b/refer-javascript/javascriptRefer06.html
@@ -337,7 +337,7 @@
     </nav>
 
 
-        <h2 class="mt20">배열 메서드</h2>
+        <h2 class="mt20">배열 객체</h2>
         <div class="list">
         <ol>
             <li><a href="#sample01">배열 메서드 : length : 배열 길이 구하기 : 반환(숫자) </a></li>
