--- a/refer-javascript/javascriptRefer01.html
+++ b/refer-javascript/javascriptRefer01.html
@@ -86,8 +86,14 @@
     document.write(z);  
 }
 </code></pre>
+        <div class="sample">
+            <button>결과보기</button>
+        </div>
         </div>
     </div>
+
+
+
     <hr>
     <div id="sample2" class="sample">
         <h2>02. 변수: 데이터 저장 + 데이터 추가 <span class="dot"></span></h2>
