--- a/refer-javascript/javascriptRefer01.html
+++ b/refer-javascript/javascriptRefer01.html
@@ -87,7 +87,8 @@
 }
 </code></pre>
         <div class="sample">
-            <button>결과보기</button>
+            <a href="#" class="btn">결과보기</a>
+            
         </div>
         </div>
     </div>
