--- a/refer-javascript/javascriptRefer10.html
+++ b/refer-javascript/javascriptRefer10.html
@@ -144,6 +144,14 @@
             background: #000;
             color: #fff;
         }
+        @media( max-width : 800px){
+            .ex1 {
+        
+            }
+            .ex1>div img {
+                align-content: space-between;
+            }
+        }
     </style>
 </head>
 
