--- a/refer-mysql/index.html
+++ b/refer-mysql/index.html
@@ -72,7 +72,7 @@
     </header>
     <div class="bs-header bgs1" id="content">
         <div class="container">
-            <h1>Layout Reference v1.0 &lt;/doc&gt;</h1>
+            <h1>MySQL Reference v1.0 &lt;/doc&gt;</h1>
             <p><a href="https://low1ife.github.io/dothome2021" target="_blank">low1ife.github.io</a></p>
         </div>
     </div>
@@ -98,9 +98,42 @@
 
                 <!-- Intro2 -->
                 <div class="bs-docs-section">
-                    <h2 id="intro1" class="page-header">MySQL 설치</h2>
+                    <h2 id="intro2" class="page-header">MySQL 설치</h2>
 
+                    <h3>MAMP 설치</h3>
+                    <img src="http://silvery92.dothome.co.kr/mySQL/img/mysql.png" alt="">
 
+                    <h3 class="pt30">MAMP 실행</h3>
+                    <div class="bs-callout bs-callout-info">
+                        윈도우 : C:\> cd MAMP/bin/mysql/bin<br>
+                        윈도우 : mysql -uroot -proot<br>
+                    </div>
+<pre class="language-js"><code>C:\MAMP\bin\mysql\bin>mysql -uroot -proot
+mysql: [Warning] Using a password on the command line interface can be insecure.
+Welcome to the MySQL monitor.  Commands end with ; or \g.
+Your MySQL connection id is 4
+Server version: 5.7.24 MySQL Community Server (GPL)
+Copyright (c) 2000, 2018, Oracle and/or its affiliates. All rights reserved.
+Oracle is a registered trademark of Oracle Corporation and/or its
+affiliates. Other names may be trademarks of their respective
+owners.
+Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.
+</code></pre>
+<div class="bs-callout bs-callout-info">
+    맥 : cd /Application/mamp/Library/bin
+    맥 : sudo mysql -uroot -proot
+ </div>
+<pre class="language-js"><code>webstoryboyhwang@Webstoryboyui-MacBookPro bin % sudo ./mysql -uroot -p
+Enter password:
+Welcome to the MySQL monitor.  Commands end with ; or \g.
+Your MySQL connection id is 383
+Server version: 5.7.32 MySQL Community Server (GPL)
+Copyright (c) 2000, 2020, Oracle and/or its affiliates. All rights reserved.
+Oracle is a registered trademark of Oracle Corporation and/or its
+affiliates. Other names may be trademarks of their respective
+owners.
+Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.
+</code></pre>
                 </div>
                 <!-- //Intro2 -->
 
@@ -114,16 +147,8 @@
             <div class="col-md-3">
                 <div class="bs-sidebar hidden-print" role="complementary">
                     <ul class="nav bs-sidenav">
-                        <li><a href="#intro1">레이아웃1</a></li>
-                        <li><a href="#intro2">레이아웃2</a></li>
-                        <li><a href="#intro3">레이아웃3</a></li>
-                        <li><a href="#intro4">레이아웃4</a></li>
-                        <li><a href="#intro5">레이아웃5</a></li>
-                        <li><a href="#intro6">레이아웃6</a></li>
-                        <li><a href="#intro7">레이아웃7</a></li>
-                        <li><a href="#intro8">레이아웃8</a></li>
-                        <li><a href="#intro9">레이아웃9</a></li>
-                        <li><a href="#intro10">레이아웃10</a></li>
+                        <li><a href="#intro1">MySQL</a></li>
+                        <li><a href="#intro2">MySQL 설치</a></li>
                     </ul>
                 </div>
             </div>
