--- a/refer-javascript/javascriptRefer10.html
+++ b/refer-javascript/javascriptRefer10.html
@@ -146,10 +146,11 @@
         }
         @media( max-width : 800px){
             .ex1 {
-        
+                position: relative;
             }
             .ex1>div img {
-                align-content: space-between;
+                position: absolute;
+                width: 30%;
             }
         }
     </style>
