--- a/site/cardType.html
+++ b/site/cardType.html
@@ -171,5 +171,32 @@
     </div>
 </section>
 <!-- //cardType03 -->
+
+ <!-- cardType04 -->
+ <section class="cardType">
+    <div class="container">
+        <div class="cardType04">
+            <h2>클로바노트에서<br>기록을 정리하는 팁</h2>
+        <div class="card-wrap">
+            <div class="card-box">
+                <em>녹음 찾기</em>
+                <h3>메모, 북마크 구간을<br>검색해서 쉽게 찾아 들어요</h3>
+                <img src="img/naver1.png" alt="사진1">
+            </div>
+            <div class="card-box">
+                <em>수정하기</em>
+                <h3>변환된 음성 기록과<br>메모를 수정할 수 있어요</h3>
+                <img src="img/naver2.png" alt="사진2">
+            </div>
+            <div class="card-box">
+                <em>다운로드</em>
+                <h3>녹음 파일과 음성 기록,<br>메모를 다운로드할 수 있어요</h3>
+                <img src="img/naver3.png" alt="사진3">
+            </div>
+        </div>
+        </div>
+    </div>
+</section>
+<!-- //cardType04 -->
 </body>
 </html>  
