--- a/site/index.html
+++ b/site/index.html
@@ -94,6 +94,13 @@
                 </div>
                 <!-- //Intro2 -->
 
+                 <!-- Intro3 -->
+                 <div class="bs-docs-section">
+                    <h2 id="intro2" class="page-header">오버이펙트유형</h2>
+                    <p>코드 보기 <a href="hoverEffectsType.html">View</a></p>
+                </div>
+                <!-- //Intro3 -->
+
                
         
             </div>
@@ -106,6 +113,7 @@
                     <ul class="nav bs-sidenav">
                         <li><a href="#intro1">카드 유형</a></li>
                         <li><a href="#intro2">이미지 유형</a></li>
+                        <li><a href="#intro3">오버이펙트 유형</a></li>
                     </ul>
                 </div>
             </div>
