--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     <!-- //box -->
 
                     <!-- box -->
-                    <section class="color-shape class">
+                    <section class="color-shape script">
                         <a href="refer-javascript/index.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
@@ -218,7 +218,7 @@
                     <!-- //box -->
 
                      <!-- box -->
-                     <section class="color-shape class">
+                     <section class="color-shape script">
                         <a href="refer-jquery/index2.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
@@ -302,7 +302,7 @@
                     <!-- //box -->
  
                      <!-- box -->
-                     <section class="color-shape reference">
+                     <section class="color-shape site">
                         <a href="site/index.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
