--- a/refer-javascript/javascriptRefer07.html
+++ b/refer-javascript/javascriptRefer07.html
@@ -305,7 +305,7 @@
     <ul class="page">
         <li><a href="/refer-html/index.html">HTML</a></li>
         <li><a href="../refer-css/index.html">CSS</a></li>
-        <li><a href="../java script/index.html">JAVASCRIPT</a></li>  
+        <li><a href="../refer-javascript/index.html">JAVASCRIPT</a></li> 
     </ul>
     <nav class="menu">
         <ul>
